--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <p id="text" style="
-        color: red; 
+        color: red;
         font-family: 
         'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-weight: bolder;
         font-size: 1.5rem;
         ">
         </p>
-        <h1>Hola Miamore</h1>
+        <h1 class="glow">Hola Miamore</h1>
         <p>oprime el botón ^^</p>
         <button id="button">❤</button>
     </div>
