implemented stickers support

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 </head>
 <body>
     <div class="container">
-        <p id="text" style="
-        color: red;
-        font-family: 
-        'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        font-weight: bolder;
-        font-size: 1.5rem;
-        ">
-        </p>
+        <div class="content">
+            <p id="text" style="
+                                color: red;
+                                font-family: 
+                                'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                                font-weight: bolder;
+                                font-size: 1.5rem;
+                                width: auto;
+                                text-align: center;
+                                padding: 15px;
+                                ">
+            </p>
+            <div id="img-container"></div>
+        </div>
         <h1 class="glow">Hola Miamore</h1>
         <p>oprime el botón ^^</p>
         <button id="button">❤</button>
